备份：Docker环境配置、FFmpeg、YOLO路径修复、视频转码支持、前端相关改动