@@ -1,5 +1,9 @@
 package com.transfer.service;
 
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -7,17 +11,17 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpHeaders;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 
 import com.transfer.common.BadRequestException;
 import com.transfer.common.ExternalServiceException;
@@ -56,9 +60,6 @@ public class CommandCenterService {
                     CommandCenterService.class
             );
 
-    private static final ObjectMapper YOLO_JSON_MAPPER =
-            new ObjectMapper();
-
     private static final List<TaskStatus>
             ACTIVE_TASK_STATUSES = List.of(
             TaskStatus.DISPATCHED,
@@ -83,6 +84,10 @@ public class CommandCenterService {
     private final OperationLogService operationLogService;
     private final RealtimeService realtimeService;
 
+    private final String yoloBaseUrl;
+    private final int yoloConnectTimeout;
+    private final int yoloReadTimeout;
+
     public CommandCenterService(
             IncidentRepository incidentRepository,
             IncidentAttachmentRepository attachmentRepository,
@@ -94,7 +99,13 @@ public class CommandCenterService {
             MapService mapService,
             ClearanceRescueAdviceService clearanceRescueAdviceService,
             OperationLogService operationLogService,
-            RealtimeService realtimeService
+            RealtimeService realtimeService,
+            @Value("${app.yolo.base-url:http://localhost:8000}")
+            String yoloBaseUrl,
+            @Value("${app.yolo.connect-timeout:3000}")
+            int yoloConnectTimeout,
+            @Value("${app.yolo.read-timeout:30000}")
+            int yoloReadTimeout
     ) {
         this.incidentRepository = incidentRepository;
         this.attachmentRepository =
@@ -114,6 +125,9 @@ public class CommandCenterService {
         this.operationLogService =
                 operationLogService;
         this.realtimeService = realtimeService;
+        this.yoloBaseUrl = yoloBaseUrl;
+        this.yoloConnectTimeout = yoloConnectTimeout;
+        this.yoloReadTimeout = yoloReadTimeout;
     }
 
     /**
@@ -408,9 +422,9 @@ public class CommandCenterService {
         List<UserRole> roles =
                 role == null
                         ? List.of(
-                        UserRole.FIELD_OFFICER,
-                        UserRole.RESCUE_WORKER
-                )
+                                UserRole.FIELD_OFFICER,
+                                UserRole.RESCUE_WORKER
+                        )
                         : List.of(role);
 
         return userAccountRepository
@@ -697,216 +711,250 @@ public class CommandCenterService {
     /**
      * 获取事故的 AI 检测附件列表（供指挥中心查看带检测框的图片/视频）。
      *
-     * 兼容几种实际情况：
-     * 1. annotatedFileUrl 已经直接保存到数据库；
-     * 2. 数据库还没有单独保存 annotatedFileUrl，但 aiDetectionJson 里有
-     *    output_video_url / output_image_url；
-     * 3. YOLO 未产出标注文件时，也返回原始图片/视频附件，让前端可以显示兜底提示，
-     *    避免弹窗完全空白。
+     * <p>是否可展示应以“处理完成且存在输出媒体地址”为准，不能依赖
+     * aiDetectedTypes。视频即使没有识别到事故类别，也可能已经正确生成
+     * 带检测框的输出文件。</p>
      */
-    @Transactional
-    public List<IncidentAttachment> findAiDetectedAttachments(Long incidentId) {
-        List<IncidentAttachment> attachments =
-                attachmentRepository.findByIncidentId(incidentId);
+    @Transactional(readOnly = true)
+    public List<IncidentAttachment> findAiDetectedAttachments(
+            Long incidentId
+    ) {
+        incidentService.findIncident(incidentId);
 
-        List<IncidentAttachment> visualAttachments =
-                attachments.stream()
-                        .filter(this::isVisualAttachment)
-                        .collect(Collectors.toList());
+        return attachmentRepository
+                .findByIncidentIdOrderByCreatedAtAsc(incidentId)
+                .stream()
+                .filter(attachment -> "COMPLETED".equals(
+                        attachment.getRecognitionStatus()
+                ))
+                .filter(attachment -> attachment.getAnnotatedFileUrl() != null
+                        && !attachment.getAnnotatedFileUrl().isBlank())
+                .toList();
+    }
 
-        List<IncidentAttachment> backfilled =
-                new ArrayList<>();
+    /**
+     * 打开 YOLO 处理后的媒体流，并透传 Range 相关响应头。
+     */
+    @Transactional(readOnly = true)
+    public AiAttachmentMediaStream openAiAttachmentMedia(
+            Long incidentId,
+            Long attachmentId,
+            String rangeHeader
+    ) {
+        IncidentAttachment attachment = attachmentRepository
+                .findById(attachmentId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Attachment not found: " + attachmentId
+                ));
 
-        int yoloOutputCount = 0;
-
-        for (IncidentAttachment attachment : visualAttachments) {
-            String annotatedUrl =
-                    resolveAnnotatedFileUrl(attachment);
-
-            if (hasText(annotatedUrl)) {
-                yoloOutputCount++;
-            }
-
-            if (!hasText(attachment.getAnnotatedFileUrl())
-                    && hasText(annotatedUrl)) {
-                attachment.setAnnotatedFileUrl(annotatedUrl);
-                backfilled.add(attachment);
-            }
-        }
-
-        if (!backfilled.isEmpty()) {
-            attachmentRepository.saveAll(backfilled);
-            log.info(
-                    "事故 {} 从 aiDetectionJson 回填 {} 个 YOLO 标注媒体地址",
-                    incidentId,
-                    backfilled.size()
+        if (!attachment.getIncidentId().equals(incidentId)) {
+            throw new BadRequestException(
+                    "Attachment does not belong to this incident"
             );
         }
-
-        log.info(
-                "事故 {} 共有 {} 个附件，返回 {} 个图片/视频附件，其中 {} 个有 YOLO 标注输出",
-                incidentId,
-                attachments.size(),
-                visualAttachments.size(),
-                yoloOutputCount
-        );
-
-        return visualAttachments;
-    }
-
-    private boolean isVisualAttachment(IncidentAttachment attachment) {
-        if (attachment == null) {
-            return false;
+        if (!"COMPLETED".equals(attachment.getRecognitionStatus())
+                || attachment.getAnnotatedFileUrl() == null
+                || attachment.getAnnotatedFileUrl().isBlank()) {
+            throw new ResourceNotFoundException(
+                    "AI processed media is not available"
+            );
+        }
+        if (rangeHeader != null
+                && !rangeHeader.isBlank()
+                && !rangeHeader.regionMatches(
+                true,
+                0,
+                "bytes=",
+                0,
+                6
+        )) {
+            throw new BadRequestException("Invalid Range header");
         }
 
-        String type = attachment.getAttachmentType();
-        return "PHOTO".equalsIgnoreCase(type)
-                || "VIDEO".equalsIgnoreCase(type);
+        HttpURLConnection connection = null;
+        try {
+            URI upstreamUri = resolveYoloMediaUri(
+                    attachment.getAnnotatedFileUrl()
+            );
+
+            connection = (HttpURLConnection)
+                    upstreamUri.toURL().openConnection();
+            connection.setRequestMethod("GET");
+            connection.setInstanceFollowRedirects(true);
+            connection.setConnectTimeout(yoloConnectTimeout);
+            connection.setReadTimeout(yoloReadTimeout);
+            connection.setRequestProperty(
+                    HttpHeaders.ACCEPT,
+                    "*/*"
+            );
+            connection.setRequestProperty(
+                    HttpHeaders.ACCEPT_ENCODING,
+                    "identity"
+            );
+
+            if (rangeHeader != null && !rangeHeader.isBlank()) {
+                connection.setRequestProperty(
+                        HttpHeaders.RANGE,
+                        rangeHeader.trim()
+                );
+            }
+
+            int statusCode = connection.getResponseCode();
+            if (statusCode != HttpURLConnection.HTTP_OK
+                    && statusCode != HttpURLConnection.HTTP_PARTIAL
+                    && statusCode != 416) {
+                connection.disconnect();
+                throw new ExternalServiceException(
+                        "YOLO media service returned HTTP "
+                                + statusCode
+                );
+            }
+
+            String contentType = resolveMediaContentType(
+                    connection.getContentType(),
+                    attachment,
+                    upstreamUri
+            );
+            long contentLength = connection.getContentLengthLong();
+            String contentRange = connection.getHeaderField(
+                    HttpHeaders.CONTENT_RANGE
+            );
+            String acceptRanges = connection.getHeaderField(
+                    HttpHeaders.ACCEPT_RANGES
+            );
+            String etag = connection.getHeaderField(
+                    HttpHeaders.ETAG
+            );
+            long lastModified = connection.getLastModified();
+
+            HttpURLConnection activeConnection = connection;
+            StreamingResponseBody body = outputStream -> {
+                try (InputStream inputStream = statusCode >= 400
+                        ? activeConnection.getErrorStream()
+                        : activeConnection.getInputStream()) {
+                    if (inputStream != null) {
+                        inputStream.transferTo(outputStream);
+                    }
+                    outputStream.flush();
+                } finally {
+                    activeConnection.disconnect();
+                }
+            };
+
+            return new AiAttachmentMediaStream(
+                    statusCode,
+                    contentType,
+                    contentLength,
+                    contentRange,
+                    acceptRanges == null || acceptRanges.isBlank()
+                            ? "bytes"
+                            : acceptRanges,
+                    etag,
+                    lastModified,
+                    body
+            );
+        } catch (IOException | IllegalArgumentException ex) {
+            if (connection != null) {
+                connection.disconnect();
+            }
+            throw new ExternalServiceException(
+                    "Failed to read AI processed media: "
+                            + ex.getMessage(),
+                    ex
+            );
+        }
     }
 
-    private String resolveAnnotatedFileUrl(
-            IncidentAttachment attachment
+    private URI resolveYoloMediaUri(
+            String storedUrl
     ) {
-        if (attachment == null) {
-            return null;
-        }
-
-        String directUrl =
-                normalizeYoloOutputUrl(attachment.getAnnotatedFileUrl());
-
-        if (hasText(directUrl)) {
-            return directUrl;
-        }
-
-        return normalizeYoloOutputUrl(
-                extractYoloOutputUrlFromJson(
-                        attachment.getAiDetectionJson(),
-                        attachment.getAttachmentType()
-                )
+        URI configuredBase = URI.create(
+                yoloBaseUrl.endsWith("/")
+                        ? yoloBaseUrl
+                        : yoloBaseUrl + "/"
         );
-    }
+        URI storedUri = URI.create(storedUrl.trim());
 
-    private String extractYoloOutputUrlFromJson(
-            String json,
-            String attachmentType
-    ) {
-        if (!hasText(json)) {
-            return null;
+        if (!storedUri.isAbsolute()) {
+            String relative = storedUrl.startsWith("/")
+                    ? storedUrl.substring(1)
+                    : storedUrl;
+            return configuredBase.resolve(relative);
+        }
+
+        String path = storedUri.getRawPath();
+        if (path == null || path.isBlank()) {
+            throw new IllegalArgumentException(
+                    "Invalid AI processed media URL"
+            );
         }
 
         try {
-            JsonNode root = YOLO_JSON_MAPPER.readTree(json);
-
-            List<String> preferredKeys =
-                    "VIDEO".equalsIgnoreCase(attachmentType)
-                            ? List.of(
-                            "output_video_url",
-                            "outputVideoUrl",
-                            "video_url",
-                            "videoUrl",
-                            "url"
-                    )
-                            : List.of(
-                            "output_image_url",
-                            "outputImageUrl",
-                            "image_url",
-                            "imageUrl",
-                            "url"
-                    );
-
-            String preferred =
-                    findFirstTextValue(root, preferredKeys);
-
-            if (hasText(preferred)) {
-                return preferred;
-            }
-
-            return findFirstTextValue(
-                    root,
-                    List.of(
-                            "output_video_url",
-                            "outputVideoUrl",
-                            "output_image_url",
-                            "outputImageUrl",
-                            "annotatedFileUrl",
-                            "annotated_file_url",
-                            "result_url",
-                            "resultUrl"
-                    )
+            return new URI(
+                    configuredBase.getScheme(),
+                    configuredBase.getUserInfo(),
+                    configuredBase.getHost(),
+                    configuredBase.getPort(),
+                    path,
+                    storedUri.getRawQuery(),
+                    null
             );
         } catch (Exception ex) {
-            log.warn(
-                    "解析 YOLO 检测 JSON 失败: {}",
-                    ex.getMessage()
+            throw new IllegalArgumentException(
+                    "Invalid AI processed media URL",
+                    ex
             );
-            return null;
         }
     }
 
-    private String findFirstTextValue(
-            JsonNode node,
-            List<String> keys
+    private String resolveMediaContentType(
+            String upstreamContentType,
+            IncidentAttachment attachment,
+            URI upstreamUri
     ) {
-        if (node == null || keys == null || keys.isEmpty()) {
-            return null;
+        if (upstreamContentType != null
+                && !upstreamContentType.isBlank()
+                && !"application/octet-stream".equalsIgnoreCase(
+                upstreamContentType
+        )) {
+            return upstreamContentType;
         }
 
-        if (node.isObject()) {
-            for (String key : keys) {
-                JsonNode value = node.get(key);
-                if (value != null && value.isTextual()
-                        && hasText(value.asText())) {
-                    return value.asText();
-                }
-            }
-
-            var fields = node.fields();
-            while (fields.hasNext()) {
-                Map.Entry<String, JsonNode> entry =
-                        fields.next();
-                String nested =
-                        findFirstTextValue(entry.getValue(), keys);
-                if (hasText(nested)) {
-                    return nested;
-                }
-            }
+        String path = upstreamUri.getPath() == null
+                ? ""
+                : upstreamUri.getPath().toLowerCase();
+        if (path.endsWith(".mp4")) {
+            return "video/mp4";
+        }
+        if (path.endsWith(".webm")) {
+            return "video/webm";
+        }
+        if (path.endsWith(".mov")) {
+            return "video/quicktime";
+        }
+        if (path.endsWith(".jpg") || path.endsWith(".jpeg")) {
+            return "image/jpeg";
+        }
+        if (path.endsWith(".png")) {
+            return "image/png";
         }
 
-        if (node.isArray()) {
-            for (JsonNode child : node) {
-                String nested =
-                        findFirstTextValue(child, keys);
-                if (hasText(nested)) {
-                    return nested;
-                }
-            }
-        }
-
-        return null;
+        return attachment.getContentType() == null
+                || attachment.getContentType().isBlank()
+                ? "application/octet-stream"
+                : attachment.getContentType();
     }
 
-    private String normalizeYoloOutputUrl(String url) {
-        if (!hasText(url)) {
-            return null;
-        }
-
-        String normalized =
-                url.trim().replace("\", "/");
-
-        int runsIndex = normalized.indexOf("/runs/api/");
-        if (runsIndex >= 0) {
-            return normalized.substring(runsIndex);
-        }
-
-        if (normalized.startsWith("runs/api/")) {
-            return "/" + normalized;
-        }
-
-        return normalized;
-    }
-
-    private boolean hasText(String value) {
-        return value != null && !value.isBlank();
+    public record AiAttachmentMediaStream(
+            int statusCode,
+            String contentType,
+            long contentLength,
+            String contentRange,
+            String acceptRanges,
+            String etag,
+            long lastModified,
+            StreamingResponseBody body
+    ) {
     }
 
     /**
